--- a/Python_with_Harry/Python_Training.ipynb
+++ b/Python_with_Harry/Python_Training.ipynb
@@ -2754,6 +2754,540 @@
         "for i in range(10,0,-1):\n",
         "    print(str(n),'x',str(i),'=',i*n)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n",
+            "10\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Exercise 1: Print First 10 natural numbers using while loop\n",
+        "i = 0\n",
+        "while i<10:\n",
+        "    print(i+1)\n",
+        "    i = i+1"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 23,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "1 \n",
+            "2 2 \n",
+            "3 3 3 \n",
+            "4 4 4 4 \n",
+            "5 5 5 5 5 \n"
+          ]
+        }
+      ],
+      "source": [
+        "# Print the following pattern\n",
+        "rows = 6\n",
+        "\n",
+        "for i in range(rows):\n",
+        "    for j in range(i):\n",
+        "        print(i, end=' ')\n",
+        "    print('')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 28,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1 \n",
+            "1 2 \n",
+            "1 2 3 \n",
+            "1 2 3 4 \n",
+            "1 2 3 4 5 \n"
+          ]
+        }
+      ],
+      "source": [
+        "n = 5\n",
+        "for i in range(1,n+1):\n",
+        "    for j in range(1,i+1):\n",
+        "        print(j, end=' ')\n",
+        "    print('')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 33,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1 1 1 1 1 \n",
+            "2 2 2 2 \n",
+            "3 3 3 \n",
+            "4 4 \n",
+            "5 \n"
+          ]
+        }
+      ],
+      "source": [
+        "n = 5\n",
+        "b =0\n",
+        "for i in range(n,0, -1):\n",
+        "    b += 1\n",
+        "    for j in range(1,i+1):\n",
+        "        print(b,end=' ')\n",
+        "    print('\\r')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 34,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "5 5 5 5 5 \n",
+            "5 5 5 5 \n",
+            "5 5 5 \n",
+            "5 5 \n",
+            "5 \n"
+          ]
+        }
+      ],
+      "source": [
+        "n = 5\n",
+        "r = n\n",
+        "for i in range(n,0,-1):\n",
+        "    for j in range(0,i):\n",
+        "        print(r, end=' ')\n",
+        "    print('\\r')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 40,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "0 1 2 3 4 5 \n",
+            "0 1 2 3 4 \n",
+            "0 1 2 3 \n",
+            "0 1 2 \n",
+            "0 1 \n"
+          ]
+        }
+      ],
+      "source": [
+        "rows = 5\n",
+        "for i in range(rows, 0, -1):\n",
+        "    # print(i)\n",
+        "    for j in range(0, i + 1):\n",
+        "      print(j, end=' ')  \n",
+        "    #   print(j, end=' ')\n",
+        "    print(\"\\r\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 41,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1 \n",
+            "3 3 \n",
+            "5 5 5 \n",
+            "7 7 7 7 \n",
+            "9 9 9 9 9 \n"
+          ]
+        }
+      ],
+      "source": [
+        "rows = 5\n",
+        "i = 1\n",
+        "while i <= rows:\n",
+        "    j = 1\n",
+        "    while j <= i:\n",
+        "        print((i * 2 - 1), end=\" \")\n",
+        "        j = j + 1\n",
+        "    i = i + 1\n",
+        "    print('')\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 42,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "5 5 5 5 5 \n",
+            "4 4 4 4 \n",
+            "3 3 3 \n",
+            "2 2 \n",
+            "1 \n"
+          ]
+        }
+      ],
+      "source": [
+        "rows = 5\n",
+        "# reverse loop\n",
+        "for i in range(rows, 0, -1):\n",
+        "    num = i\n",
+        "    for j in range(0, i):\n",
+        "        print(num, end=' ')\n",
+        "    print(\"\\r\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 43,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1 \n",
+            "2 1 \n",
+            "3 2 1 \n",
+            "4 3 2 1 \n",
+            "5 4 3 2 1 \n"
+          ]
+        }
+      ],
+      "source": [
+        "rows = 6\n",
+        "for i in range(1, rows):\n",
+        "    for j in range(i, 0, -1):\n",
+        "        print(j, end=' ')\n",
+        "    print(\"\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 44,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "5 4 3 2 1 \n",
+            "4 3 2 1 \n",
+            "3 2 1 \n",
+            "2 1 \n",
+            "1 \n",
+            "\n"
+          ]
+        }
+      ],
+      "source": [
+        "rows = 5\n",
+        "for i in range(0, rows + 1):\n",
+        "    for j in range(rows - i, 0, -1):\n",
+        "        print(j, end=' ')\n",
+        "    print()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 45,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1 \n",
+            "3 2 \n",
+            "6 5 4 \n",
+            "10 9 8 7 \n"
+          ]
+        }
+      ],
+      "source": [
+        "start = 1\n",
+        "stop = 2\n",
+        "current_num = stop\n",
+        "for row in range(2, 6):\n",
+        "    for col in range(start, stop):\n",
+        "        current_num -= 1\n",
+        "        print(current_num, end=' ')\n",
+        "    print(\"\")\n",
+        "    start = stop\n",
+        "    stop += row\n",
+        "    current_num = stop"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 46,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "          1 \n",
+            "        1 2 \n",
+            "      1 2 3 \n",
+            "    1 2 3 4 \n",
+            "  1 2 3 4 5 \n"
+          ]
+        }
+      ],
+      "source": [
+        "rows = 6\n",
+        "for i in range(1, rows):\n",
+        "    num = 1\n",
+        "    for j in range(rows, 0, -1):\n",
+        "        if j > i:\n",
+        "            print(\" \", end=' ')\n",
+        "        else:\n",
+        "            print(num, end=' ')\n",
+        "            num += 1\n",
+        "    print(\"\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 47,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1 \n",
+            "1 1 \n",
+            "1 2 1 \n",
+            "1 3 3 1 \n",
+            "1 4 6 4 1 \n",
+            "1 5 10 10 5 1 \n",
+            "1 6 15 20 15 6 1 \n"
+          ]
+        }
+      ],
+      "source": [
+        "def print_pascal_triangle(size):\n",
+        "    for i in range(0, size):\n",
+        "        for j in range(0, i + 1):\n",
+        "            print(decide_number(i, j), end=\" \")\n",
+        "        print()\n",
+        "\n",
+        "\n",
+        "def decide_number(n, k):\n",
+        "    num = 1\n",
+        "    if k > n - k:\n",
+        "        k = n - k\n",
+        "    for i in range(0, k):\n",
+        "        num = num * (n - i)\n",
+        "        num = num // (i + 1)\n",
+        "    return num\n",
+        "\n",
+        "# set rows\n",
+        "rows = 7\n",
+        "print_pascal_triangle(rows)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 56,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "75\n",
+            "150\n",
+            "145\n"
+          ]
+        }
+      ],
+      "source": [
+        "# # Display numbers from a list using loop\n",
+        "# Write a program to display only those numbers from a list that satisfy the following conditions\n",
+        "\n",
+        "# The number must be divisible by five\n",
+        "# If the number is greater than 150, then skip it and move to the next number\n",
+        "# If the number is greater than 500, then stop the loop\n",
+        "\n",
+        "\n",
+        "list = [12, 75, 150, 180, 145, 525, 50]\n",
+        "b = 150\n",
+        "c = 500\n",
+        "for i in list:\n",
+        "    a = i%5\n",
+        "    if i>c:\n",
+        "        break\n",
+        "    elif i>b:\n",
+        "        continue\n",
+        "    elif (a ==0):\n",
+        "        print(i)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 58,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Total digits are: 6\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Write a program to count the total number of digits in a number using a while loop.\n",
+        "num = int(input('Enter number:'))\n",
+        "i = 0\n",
+        "while num!= 0:\n",
+        "    num = num//10\n",
+        "    i = i+1\n",
+        "print(f'Total digits are: {i}')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 75,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "5 4 3 2 1 \n",
+            "4 3 2 1 \n",
+            "3 2 1 \n",
+            "2 1 \n",
+            "1 \n",
+            "\n"
+          ]
+        }
+      ],
+      "source": [
+        "n = 5\n",
+        "k = 5\n",
+        "for i in range(0,n+1):\n",
+        "    for j in range(k-i,0,-1):\n",
+        "        print(j,end=' ')\n",
+        "    print()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 78,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "50\n",
+            "40\n",
+            "30\n",
+            "20\n",
+            "10\n"
+          ]
+        }
+      ],
+      "source": [
+        "list1 = [10, 20, 30, 40, 50]\n",
+        "reverselist= reversed(list1)\n",
+        "for i in reverselist:\n",
+        "    print(i)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 82,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "-10\n",
+            "-9\n",
+            "-8\n",
+            "-7\n",
+            "-6\n",
+            "-5\n",
+            "-4\n",
+            "-3\n",
+            "-2\n",
+            "-1\n"
+          ]
+        }
+      ],
+      "source": [
+        "for num in range(-10, 0, 1):\n",
+        "    print(num)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 83,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "Done!\n"
+          ]
+        }
+      ],
+      "source": [
+        "for i in range(5):\n",
+        "    print(i)\n",
+        "else:\n",
+        "    print('Done!')"
+      ]
     }
   ],
   "metadata": {
